some velocity stuff

--- a/lessons/02_Classes_and_Objects/00_Classes_and_Objects.ipynb
+++ b/lessons/02_Classes_and_Objects/00_Classes_and_Objects.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T17:58:52.281983Z",
@@ -45,7 +45,18 @@
      "text": [
       "Alice\n",
       "14\n",
-      "Hello, my name is Alice and I am 14 years old. Bonjour!\n"
+      "Hello, my name is Alice and I am 14 years old. mooooo!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bad pipe message: %s [b'tion/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed', b'xchange;v=b3;q=0.7\\r\\nHost: localhost:34163\\r\\nU', b'r-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/133.0.0.0 S', b'ari/537.36\\r\\nAccept-Encoding: gzip, deflate, br, zstd\\r\\nAccept-Language: en-US,en;q=0.9\\r\\nCache-Con']\n",
+      "Bad pipe message: %s [b'ol: max-age=0\\r\\nReferer: https://literate-fortnight-pjgx4pw99r653rr96.github.dev/\\r\\nX-Request-ID: 8c3f546f5b651ea28fd']\n",
+      "Bad pipe message: %s [b'1083c391a74\\r\\nX-Real-IP: 10.240.2.131\\r\\nX-Forwarded-Port: 443\\r\\nX-Forwarded-Scheme: https\\r\\nX-Original-UR']\n",
+      "Bad pipe message: %s [b' /?vscodeBrowserReqId=1743359185570\\r\\nX-Scheme: https\\r\\nsec-fetch-site: sa']\n",
+      "Bad pipe message: %s [b'-site\\r\\nsec-fetch-mode: navigate\\r\\nsec-fetch-dest: iframe\\r\\nsec-ch-ua: \"Not(A:Brand\";v=\"99\", \"Google Chrome\";v=', b'33\", \"Chromium\";v=\"133\"\\r\\nsec-ch-u', b'mobile: ?0\\r\\nsec-ch-ua-platform: \"macOS\"\\r\\npriority: u=0, i\\r\\nX-Original-Proto: https\\r\\nX-Forwarded-', b'oto: https\\r\\nX-Forwarded-Host: literate-fortnight-pjgx4pw99r653rr96-34163.app.gi']\n"
      ]
     }
    ],
@@ -72,7 +83,7 @@
     "print(alice.name) # Access the name attribute of the alice object\n",
     "print(alice.age)\n",
     "\n",
-    "alice.say_hello(\"Bonjour!\")  # Call the say_hello method of the alice object"
+    "alice.say_hello(\"mooooo!\")  # Call the say_hello method of the alice object"
    ]
   },
   {
@@ -247,22 +258,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, my name is Alice and I am 35 years old. Hello!\n",
-      "My spouse is Bob\n",
-      "I have 2 children.\n",
+      "Hello, my name is Hilary and I am 52 years old. Hello!\n",
+      "My spouse is Peter\n",
+      "I have 5 children.\n",
       "Their names are:\n",
-      "  Charlie 10\n",
-      "  Dahlia 8\n",
+      "  Elijah 20\n",
+      "  Miriam 20\n",
+      "  Hannah 18\n",
+      "  Naomi 15\n",
+      "  Rivka 12\n",
       "\n",
-      "Hello, my name is Dahlia and I am 8 years old. Yo!\n",
-      "My parents are Alice, Bob\n"
+      "Hello, my name is Naomi and I am 15 years old. Yo!\n",
+      "My parents are Hilary, Peter\n"
      ]
     }
    ],
@@ -333,22 +347,32 @@
     "        \n",
     "        \n",
     "# Now lets make a family\n",
-    "mom = Parent(\"Alice\", 35)\n",
-    "dad = Parent(\"Bob\", 40, mom)\n",
+    "mom = Parent(\"Hilary\", 52)\n",
+    "dad = Parent(\"Peter\", 57, mom)\n",
     "\n",
-    "charlie = Child(\"Charlie\", 10, [mom, dad])\n",
-    "dahlia = Child(\"Dahlia\", 8, [mom, dad])\n",
+    "Elijah = Child(\"Elijah\", 20, [mom, dad])\n",
+    "Miriam = Child(\"Miriam\", 20, [mom, dad])\n",
+    "Hannah = Child(\"Hannah\", 18, [mom, dad])\n",
+    "Naomi = Child(\"Naomi\", 15, [mom, dad])\n",
+    "Rivka = Child(\"Rivka\", 12, [mom, dad])\n",
     "\n",
     "# Connect the children to the parents\n",
-    "mom.add_child(charlie)\n",
-    "mom.add_child(dahlia)\n",
-    "dad.add_child(charlie)\n",
-    "dad.add_child(dahlia)\n",
+    "mom.add_child(Elijah)\n",
+    "mom.add_child(Miriam)\n",
+    "mom.add_child(Hannah)\n",
+    "mom.add_child(Naomi)\n",
+    "mom.add_child(Rivka)\n",
+    "dad.add_child(Elijah)\n",
+    "dad.add_child(Miriam)\n",
+    "dad.add_child(Hannah)\n",
+    "dad.add_child(Naomi)\n",
+    "dad.add_child(Rivka)\n",
+    "\n",
     "\n",
     "\n",
     "mom.say_hello(\"Hello!\") # Call the say_hello method of the mom object\n",
     "print()\n",
-    "dahlia.say_hello(\"Yo!\")"
+    "Naomi.say_hello(\"Yo!\")"
    ]
   },
   {
@@ -420,15 +444,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice is 35 years old.\n",
-      "Charlie is 10 years old.\n"
+      "Hilary is 52 years old.\n",
+      "Naomi is 15 years old.\n"
      ]
     }
    ],
@@ -440,7 +464,7 @@
     "    print(f\"{person.name} is {person.age} years old.\")\n",
     "    \n",
     "get_name_and_age(mom)\n",
-    "get_name_and_age(charlie)\n",
+    "get_name_and_age(Naomi)\n",
     "\n",
     "    "
    ]
@@ -471,7 +495,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
