--- a/lessons/02_Classes_and_Objects/00_Classes_and_Objects.ipynb
+++ b/lessons/02_Classes_and_Objects/00_Classes_and_Objects.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T17:58:52.281983Z",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -450,9 +450,7 @@
     "    print(f\"{person.name} is {person.age} years old.\")\n",
     "    \n",
     "get_name_and_age(mom)\n",
-    "get_name_and_age(Naomi)\n",
-    "\n",
-    "    "
+    "get_name_and_age(Naomi) "
    ]
   },
   {
