--- a/lessons/02_Classes_and_Objects/00_Classes_and_Objects.ipynb
+++ b/lessons/02_Classes_and_Objects/00_Classes_and_Objects.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T17:58:52.281983Z",
@@ -40,12 +40,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alice\n",
-      "14\n",
-      "Hello, my name is Alice and I am 14 years old. mooooo!\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.2' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages."
      ]
     }
    ],
@@ -171,8 +171,48 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.2' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Alien:\n",
+    "    def __init__(self, number_of_eyes, number_of_legs, color):\n",
+    "        self.number_of_eyes = number_of_eyes\n",
+    "        self.number_of_legs = number_of_legs\n",
+    "        self.color = color\n",
+    "    \n",
+    "    def describe(self):\n",
+    "        color_length = len(self.color)\n",
+    "        print(f\"This alien has {self.number_of_eyes} eyes and {self.number_of_legs} legs and is {self.color}. It has {color_length} letters in its color.\")\n",
+    "\n",
+    "\n",
+    "aliens = []\n",
+    "\n",
+    "\n",
+    "alien1 = Alien(2, 4, \"green\")\n",
+    "alien2 = Alien(3, 6, \"blue\")\n",
+    "alien3 = Alien(1, 2, \"red\")\n",
+    "alien4 = Alien(5, 8, \"purple\")\n",
+    "\n",
+    "\n",
+    "aliens.append(alien1)\n",
+    "aliens.append(alien2)\n",
+    "aliens.append(alien3)\n",
+    "aliens.append(alien4)\n",
+    "\n",
+    "\n",
+    "for alien in aliens:\n",
+    "    alien.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -493,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
