--- a/lessons/03_Vectors/00_Vectors.ipynb
+++ b/lessons/03_Vectors/00_Vectors.ipynb
@@ -31,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vector: Vector(4, 4)\n",
-      "Magnitude: 5.656854249492381\n",
+      "Vector: Vector(100000, 100000)\n",
+      "Magnitude: 141421.35623730952\n",
       "Direction: 45.0°\n"
      ]
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "<Vector2(100, 100)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Vector2(110, 100)>"
+       "<Vector2(500, 100)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "<Vector2(170.711, 170.711)>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +305,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Using vectors instead of seperate x and y makes our programs easier to write, read and debug. \n"
    ]
@@ -326,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
