--- a/lessons/03_Vectors/02_Using_Vectors.ipynb
+++ b/lessons/03_Vectors/02_Using_Vectors.ipynb
@@ -31,7 +31,7 @@
     "* At 30°, the magnitude ( length ) of the vector will be twice the Y component,\n",
     "  and at 60°, the magnitude will be twice the X component.\n",
     "  \n",
-    "After experimenting with the program, read the cod to figure out how it works. \n",
+    "After experimenting with the program, read the code to figure out how it works. \n",
     "\n",
     "## Gravity Bounce Update\n",
     "\n",
